--- a/game.css
+++ b/game.css
@@ -67,6 +67,7 @@ button.btn-start {
     background-color: rgb(0, 183, 255);
     display: inline-block;
     border: none;
+    top: 100px;
     border-radius: 10px;
     padding: 10px 25px;
     font-size: 20px;
